# Humanoid-AI-book

./: .gitignore  404.html  GEMINI.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  sitemap.xml
.agent/workflows/: plan-lesson.md
.specify/memory/: constitution.md
.specify/templates/: lesson-template.md
assets/css/: styles.0759d883.css
assets/js/: 15783b46.59580e92.js  17896441.a28b5647.js  1df93b7f.9e331e3d.js  1f391b9e.fd3da2a2.js  237.1dbe6abb.js  2e43a227.2842dbaf.js  34b338d8.f0eb8aec.js  393be207.aafd9c6f.js  39cfc4cf.fa4dd56c.js  426e7bd4.ad6a4feb.js  449.994684d4.js  4c9810a6.7f79b7ce.js  54b8fa7a.7a260bdd.js  58227415.3daa04c7.js  5e95c892.8fc8d5eb.js  604c9469.ab3042a6.js  616aa9a9.3e5af5ce.js  (+11 more)
auth-backend/: package-lock.json  package.json
backend/: create_user.py  debug_auth.py  index.py  init_db.py  main.py  pyproject.toml  reset_db.py
backend/app/: __init__.py  config.py  database.py  models.py  security.py  users.py
backend/app/agents/: tutor_agent.py
backend/app/routers/: __init__.py  chat.py  translation.py  users.py
backend/app/services/: indexing_service.py  translation.py
backend/tests/: test_chat.py  test_indexing.py  test_translation.py
frontend/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts  tsconfig.json
login/: index.html
markdown-page/: index.html
profile/: index.html
qdrant_storage/: raft_state.json
reference/: book_outline.md.resolved
register/: index.html
tests/: test_lesson_1_3.py  test_lesson_1_4.py  test_lesson_2_2.py  test_lesson_2_3.py  test_lesson_3_1.py
(+175 files in other folders)
