[project]
name = "robotics-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.12.0",
    "fastapi>=0.124.4",
    "flake8>=7.3.0",
    "langchain-google-genai>=4.1.2",
    "langchain-text-splitters>=1.1.0",
    "mujoco>=3.4.0",
    "numpy>=2.3.5",
    "openai>=2.13.0",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "qdrant-client>=1.16.2",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "backend",
]
